# med-llm-detection

./: .gitignore  README.md  pyproject.toml
scirpts/: ddr_yolo12.py  ddr_yolo12_1cls.py  eophtha_yolo12.py  eophtha_yolo12_1cls.py  fgart_yolo12.py  fgart_yolo12_1cls.py  merge_yolo12.py  merge_yolo12_1cls.py  train_eval_all.sh
scripts/: cross_eval_full_batch.sh  cross_eval_report_batch.sh  cross_eval_stage1.sh  cross_eval_stage2.sh  ddr_yolo12.py  ddr_yolo12_1cls.py  eophtha_yolo12.py  eophtha_yolo12_1cls.py  export_eval_reports.py  export_eval_summary.py  fgart_yolo12.py  fgart_yolo12_1cls.py  merge_yolo12.py  merge_yolo12_1cls.py  train_eval_all.sh  yolo_eval_batch.sh  yolo_eval_overlay.sh  yolo_overlay_batch.sh
src/eval/: __init__.py  common.py  metrics_utils.py  yolo_eval.py  yolo_overlay.py
src/med_llm_detection/: __init__.py
src/preprocessing/: ddr_crop_prepare.py  ddr_dedup_labels.py  ddr_prepare.py  ddr_prepare_yolo.py  diaretdb1_prepare.py  diaretdb1_prepare_yolo.py  eophtha_prepare.py  eophtha_prepare_yolo.py  fgart_prepare.py  fgart_prepare_yolo.py  idrid_prepare.py  idrid_prepare_yolo.py  merge_prepare.py  merge_prepare_yolo.py
src/utils/table/: config.py  detection_table_format.xlsx  fill_2_main.py  fill_3_5.py  fill_4_fppi.py  parser.py
src/visualization/: ddr_overlay.py  fgart_gt_overlay_re.py  fgart_overlay.py  gt_overlay.py  overlay_test.sh
src/yolo/: __init__.py  common.py  eval.py  metrics.py  overlay.py  training.py
src/yolo/preprocessing/: __init__.py  ddr.py  diaretdb1.py  eophtha.py  fgart.py  idrid.py  merge.py
(+7 files in other folders)
